--- a/page.html
+++ b/page.html
@@ -4,11 +4,11 @@
     <title>Marker Clustering</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+    <script src="./page.js" defer></script>
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIwzALxUPNbatRBj3Xi1Uhp0fFzwWNBkE&callback=initMap"
       defer
     ></script>
-    <script src="./page.js"></script>
    <!--  <link rel="stylesheet" type="text/css" href="./style.css" /> -->
     <style type="text/css">
     /* Always set the map height explicitly to define the size of the div
@@ -27,6 +27,7 @@
     </style>
   </head>
   <body>
+    <button type="button" id="test">Show all infowindows</button>
     <div id="map"></div>
   </body>
 </html>
