add country list & click list item to show marker

--- a/page.html
+++ b/page.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Marker Clustering</title>
+    <title>Google Map</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
     <script src="./page.js" defer></script>
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIwzALxUPNbatRBj3Xi1Uhp0fFzwWNBkE&callback=initMap"
@@ -27,7 +26,6 @@
     </style>
   </head>
   <body>
-    <button type="button" id="test">Show all infowindows</button>
     <div id="map"></div>
   </body>
 </html>
