--- a/page.html
+++ b/page.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Google Map</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="./page.js" defer></script>
     <script
